--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>SFSU CS Department - CSC 642 Fall 2016 project: Form UI Alvin Lu alvinlu@mail.sfsu.edu</title>
-    <link rel="stylesheet" href="/vendor/bootstrap/css/bootstrap.css" />
-    <link rel="stylesheet" href="/dist/css/bootstrapValidator.css" />
+    <link rel="stylesheet" href="/~alvinlu/almondmilk.github.io/vendor/bootstrap/css/bootstrap.css" />
+    <link rel="stylesheet" href="/~alvinlu/almondmilk.github.io/dist/css/bootstrapValidator.css" />
 
     <!-- Include the FontAwesome CSS if you want to use feedback icons provided by FontAwesome -->
     <!--<link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" />-->
     <link class="jsbin" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.js" rel="stylesheet" type="text/css" />
     <script class="jsbin" src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
     <script class="jsbin" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.0/jquery-ui.min.js"></script>
-    <script type="text/javascript" src="/vendor/jquery/jquery-1.10.2.min.js"></script>
-    <script type="text/javascript" src="/vendor/bootstrap/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="/dist/js/bootstrapValidator.js"></script>
+    <script type="text/javascript" src="/~alvinlu/almondmilk.github.io/vendor/jquery/jquery-1.10.2.min.js"></script>
+    <script type="text/javascript" src="/~alvinlu/almondmilk.github.io/vendor/bootstrap/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="/~alvinlu/almondmilk.github.io/dist/js/bootstrapValidator.js"></script>
 
     <style>
         article,
@@ -642,7 +642,7 @@
             });
         });
     </script>
-    <script type="text/javascript" src="/dist/js/photo.js"></script>
+    <script type="text/javascript" src="/~alvinlu/almondmilk.github.io/dist/js/photo.js"></script>
 </body>
 
 </html>
