--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     </div>
 
                     <!--<form id="defaultForm" method="GET" class="form-horizontal" action="target.php">-->
-                    <form id="defaultForm" method="get" class="form-horizontal" action="result.html">
+                    <form id="defaultForm" method="post" class="form-horizontal" action="verification.php">
                         <div class="page-header">
                             <h4 style='text-align: left;'>Personal Information</h4>
                         </div>
