testing on school server

--- a/index.html
+++ b/index.html
@@ -255,52 +255,52 @@
                                 <script>
                                     var randNum = Math.floor(Math.random() * ((11 + 1) - 2)) + 2;
                                     if (randNum == 2) {
-                                        document.write('<img src="/img/1.jpg">');
+                                        document.write('<img src="/~alvinlu/almondmilk.github.io/img/1.jpg">');
                                         document.write('<br><h6 style="text-align: left;">Uppercase Only</h6>');
                                         document.write('<input type="text" class="form-control" name="captchaOne" />');
                                     }
                                     if (randNum == 3) {
-                                        document.write('<img src="/img/2.jpg">');
+                                        document.write('<img src="/~alvinlu/almondmilk.github.io/img/2.jpg">');
                                         document.write('<br><h6 style="text-align: left;">Uppercase Only</h6>');
                                         document.write('<input type="text" class="form-control" name="captchaTwo" />');
                                     }
                                     if (randNum == 4) {
-                                        document.write('<img src="/img/3.jpg">');
+                                        document.write('<img src="/~alvinlu/almondmilk.github.io/img/3.jpg">');
                                         document.write('<br><h6 style="text-align: left;">Uppercase Only</h6>');
                                         document.write('<input type="text" class="form-control" name="captchaThree" />');
                                     }
                                     if (randNum == 5) {
-                                        document.write('<img src="/img/4.jpg">');
+                                        document.write('<img src="/~alvinlu/almondmilk.github.io/img/4.jpg">');
                                         document.write('<br><h6 style="text-align: left;">Uppercase Only</h6>');
                                         document.write('<input type="text" class="form-control" name="captchaFour" />');
                                     }
                                     if (randNum == 6) {
-                                        document.write('<img src="/img/5.jpg">');
+                                        document.write('<img src="/~alvinlu/almondmilk.github.io/img/5.jpg">');
                                         document.write('<br><h6 style="text-align: left;">Uppercase Only</h6>');
                                         document.write('<input type="text" class="form-control" name="captchaFive" />');
                                     }
                                     if (randNum == 7) {
-                                        document.write('<img src="/img/6.jpg">');
+                                        document.write('<img src="/~alvinlu/almondmilk.github.io/img/6.jpg">');
                                         document.write('<br><h6 style="text-align: left;">Uppercase Only</h6>');
                                         document.write('<input type="text" class="form-control" name="captchaSix" />');
                                     }
                                     if (randNum == 8) {
-                                        document.write('<img src="/img/7.jpg">');
+                                        document.write('<img src="/~alvinlu/almondmilk.github.io/img/7.jpg">');
                                         document.write('<br><h6 style="text-align: left;">Uppercase Only</h6>');
                                         document.write('<input type="text" class="form-control" name="captchaSeven" />');
                                     }
                                     if (randNum == 9) {
-                                        document.write('<img src="/img/8.jpg">');
+                                        document.write('<img src="/~alvinlu/almondmilk.github.io/img/8.jpg">');
                                         document.write('<br><h6 style="text-align: left;">Uppercase Only</h6>');
                                         document.write('<input type="text" class="form-control" name="captchaEight" />');
                                     }
                                     if (randNum == 10) {
-                                        document.write('<img src="/img/9.jpg">');
+                                        document.write('<img src="/~alvinlu/almondmilk.github.io/img/9.jpg">');
                                         document.write('<br><h6 style="text-align: left;">Uppercase Only</h6>');
                                         document.write('<input type="text" class="form-control" name="captchaNine" />');
                                     }
                                     if (randNum == 11) {
-                                        document.write('<img src="/img/10.jpg">');
+                                        document.write('<img src="/~alvinlu/almondmilk.github.io/img/10.jpg">');
                                         document.write('<br><h6 style="text-align: left;">Uppercase Only</h6>');
                                         document.write('<input type="text" class="form-control" name="captchaTen" />');
                                     }
