--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     </div>
 
                     <!--<form id="defaultForm" method="GET" class="form-horizontal" action="target.php">-->
-                    <form id="defaultForm" method="post" class="form-horizontal" action="verification.php">
+                    <form id="defaultForm" method="post" class="form-horizontal" action="verification.php" enctype="multipart/form-data">
                         <div class="page-header">
                             <h4 style='text-align: left;'>Personal Information</h4>
                         </div>
@@ -224,14 +224,14 @@
                         </div>
 
                         <!-- image upload -->
-                        <!-- <div class="form-group">
+                         <div class="form-group">
                             <label class="col-lg-3 control-label">Upload Image(s)</label>
                             <div id="wrapper" class="col-lg-5">
-                                <input id="fileUpload" type="file" multiple />
+                                <input id="fileUpload" type="file" name="fileToUpload" multiple />
                                 <br />
                                 <div id="image-holder"></div>
                             </div>
-                        </div> -->
+                        </div>
 
                         <div class="page-header">
                             <h4 style='text-align: left;'>Terms and Agreement</h4>
