--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
                             <label class="col-lg-3 control-label">Terms *</label>
                             <div class="col-lg-5">
                                 <div class="checkbox">
-                                    <input type="checkbox" name="acceptTerms" /> Accept the terms and policies
+                                    <input type="checkbox" name="terms" /> Accept the terms and policies
                                 </div>
                             </div>
                         </div>
