--- a/index.html
+++ b/index.html
@@ -229,6 +229,7 @@
                             <div id="wrapper" class="col-lg-5">
                                 <input id="fileUpload" type="file" name="fileToUpload" multiple />
                                 <br />
+                                <h6>One image only</h6>
                                 <div id="image-holder"></div>
                             </div>
                         </div>
