--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                          <div class="form-group">
                             <label class="col-lg-3 control-label">Upload Image(s)</label>
                             <div id="wrapper" class="col-lg-5">
-                                <input id="fileUpload" type="file" name="fileToUpload" multiple />
+                                <input id="fileUpload" type="file" class="btn btn-default" name="fileToUpload" multiple />
                                 <br />
                                 <h6>One image only</h6>
                                 <div id="image-holder"></div>
