testing style of upload

--- a/index.html
+++ b/index.html
@@ -312,9 +312,9 @@
                         <!-- buttons -->
                         <div class="form-group">
                             <div class="col-lg-9 col-lg-offset-3">
-                                <button type="button" class="btn btn-info" id="resetBtn">Reset form</button>
-                                <button type="button" class="btn btn-info" id="validateBtn">Manual validate</button>
-                                <button type="submit" class="btn btn-primary" value="Submit">Submit</button>
+                                <button type="button" class="btn btn-danger" id="resetBtn">Reset form</button>
+                                <button type="button" class="btn btn-primary" id="validateBtn">Manual validate</button>
+                                <button type="submit" class="btn btn-success" value="Submit">Submit</button>
                             </div>
                         </div>
 
