--- a/index.html
+++ b/index.html
@@ -574,6 +574,9 @@
                     },
                     phoneNumber: {
                         validators: {
+                            regexp: {
+                                regexp: /[\(]\d{3}[\)]\d{3}[\-]\d{4}/
+                            },
                             digits: {
                                 message: 'The phone number can contain only digits and hyphens'
                             },
