--- a/index.html
+++ b/index.html
@@ -574,9 +574,9 @@
                     },
                     phoneNumber: {
                         validators: {
-                            digits: {
-                                message: 'The phone number can contain only digits and hyphens'
-                            },
+                            // digits: {
+                            //     message: 'The phone number can contain only digits and hyphens'
+                            // },
                             notEmpty: {
                                 message: 'The phone number is required and cannot be empty'
                             }
