--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                             <div class="col-lg-5">
                               <!-- [\(]\d{3}[\)]\d{3}[\-]\d{4} -->
                               <!-- ^d{3}[\-]\d{3}[\-]\d{4}$ -->
-                                <input type="text" class="form-control" placeholder="123-456-7890" pattern="^[\(]\d{3}[\)]\d{3}[\-]\d{4}$" name="phoneNumber" />
+                                <input type="text" class="form-control" placeholder="(123)456-7890" pattern="^[\(]\d{3}[\)]\d{3}[\-]\d{4}$" name="phoneNumber" />
                             </div>
                         </div>
 
