--- a/index.html
+++ b/index.html
@@ -579,6 +579,10 @@
                             // digits: {
                             //     message: 'The phone number can contain only digits and hyphens'
                             // },
+                            regexp: {
+                                regexp: ^[\(]\d{3}[\)]\d{3}[\-]\d{4}$,
+                                message: 'Numbers and parenthesis only'
+                            },
                             notEmpty: {
                                 message: 'The phone number is required and cannot be empty'
                             }
