--- a/index.html
+++ b/index.html
@@ -97,7 +97,8 @@
                             <div class="col-lg-5">
                               <!-- [\(]\d{3}[\)]\d{3}[\-]\d{4} -->
                               <!-- ^d{3}[\-]\d{3}[\-]\d{4}$ -->
-                                <input type="text" class="form-control" placeholder="(123)456-7890" pattern="^[\(]\d{3}[\)]\d{3}[\-]\d{4}$" name="phoneNumber" />
+                              <!-- pattern="^[\(]\d{3}[\)]\d{3}[\-]\d{4}$" -->
+                                <input type="text" class="form-control" placeholder="(123)456-7890"  name="phoneNumber" />
                             </div>
                         </div>
 
@@ -580,7 +581,7 @@
                             //     message: 'The phone number can contain only digits and hyphens'
                             // },
                             regexp: {
-                                regexp: ^[\(]\d{3}[\)]\d{3}[\-]\d{4}$,
+                                regexp: /^[\(]\d{3}[\)]\d{3}[\-]\d{4}$/,
                                 message: 'Numbers and parenthesis only'
                             },
                             notEmpty: {
