--- a/index.html
+++ b/index.html
@@ -581,7 +581,7 @@
                             //     message: 'The phone number can contain only digits and hyphens'
                             // },
                             regexp: {
-                                regexp: /(^[\(]\d{3}[\)]\d{3}[\-]\d{4}$)|(^\d{3}$)/,
+                                regexp: /(^\d{3}[\-]\d{3}[\-]\d{4}$)|(^\d{3}$)/,
                                 message: 'Numbers and parenthesis only'
                             },
                             notEmpty: {
