--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                             <label class="col-lg-3 control-label">Upload Image(s)</label>
                             <div id="wrapper" class="col-lg-5">
                                 <input id="fileUpload" type="file" class="btn btn-default" name="fileToUpload" multiple />
-                                <h6>One image only</h6>
+                                <h6>One image only and maximum file size is 5mb</h6>
                                 <div id="image-holder"></div>
                             </div>
                         </div>
