fixed terms validator

--- a/index.html
+++ b/index.html
@@ -536,7 +536,7 @@
                             }
                         }
                     },
-                    acceptTerms: {
+                    terms: {
                         validators: {
                             notEmpty: {
                                 message: 'You have to accept the terms and policies'
