--- a/index.html
+++ b/index.html
@@ -592,7 +592,7 @@
                     date: {
                         validators: {
                             date: {
-                                format: 'YYYY/MM/DD',
+                                format: 'MM/DD/YYYY',
                                 message: 'The date is not valid'
                             },
                             regexp: {
