--- a/index.html
+++ b/index.html
@@ -591,12 +591,12 @@
                     },
                     date: {
                         validators: {
-                            date: {
-                                format: 'MM/DD/YYYY',
-                                message: 'The date is not valid'
-                            },
+                            // date: {
+                            //     format: 'MM/DD/YYYY',
+                            //     message: 'The date is not valid'
+                            // },
                             regexp: {
-                                regexp: /^([1-9]|1[012])[\-]([1-9]|[12][0-9]|3[01])[\-]((?:19|20)\d\d)$/,
+                                regexp: /(^([13578]|1[02])[\-.]([1-9]|[12][0-9]|3[01])[\-.](18|19|20)[0-9]{2}$)|(^([469]|11)[\-.]([1-9]|[12][0-9]|30)[\-.](18|19|20)[0-9]{2}$)|(^(2)[-\-.]([1-9]|1[0-9]|2[0-8])[\-.](18|19|20)[0-9]{2}$)|(^(2)[\-.]29[\-.](((18|19|20)(04|08|[2468][048]|[13579][26]))|2000)$)/,
                                 message: 'ex. 12-23-2016  8-8-2016'
                             },
                             notEmpty: {
