--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                         <div class="form-group">
                             <label class="col-lg-3 control-label">Date *</label>
                             <div class="col-lg-5">
-                                <input type="text" class="form-control" name="date" placeholder="eg. 2016/12/23" />
+                                <input type="text" class="form-control" name="date" placeholder="12-26-2016" />
                             </div>
                         </div>
 
