--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
                                     var hyphen = "-";
                                     var date = new Date();
                                     var month = date.getMonth();
+                                    document.write(month);
                                     var day = date.getDate();
                                     var year = date.getFullYear();
                                     document.getElementById("date").placeholder = month + hyphen + day + hyphen + year;
