--- a/index.html
+++ b/index.html
@@ -114,16 +114,41 @@
                         <div class="form-group">
                             <label class="col-lg-3 control-label">Date *</label>
                             <div class="col-lg-5">
+                                <input type="text" class="form-control" id="date" name="date"  />
                                 <script>
                                     var hyphen = "-";
                                     var date = new Date();
                                     var month = date.getMonth();
-                                    document.write(month);
+                                    if(month == 0){
+                                        month = 1;
+                                    }else if(month == 1){
+                                        month = 2;
+                                    }else if(month == 2){
+                                        month = 3;
+                                    }else if(month == 3){
+                                        month = 4;
+                                    }else if(month == 4){
+                                        month = 5;
+                                    }else if(month == 5){
+                                        month = 6;
+                                    }else if(month == 6){
+                                        month = 7;
+                                    }else if(month == 7){
+                                        month = 8;
+                                    }else if(month == 8){
+                                        month = 9;
+                                    }else if(month == 9){
+                                        month = 10;
+                                    }else if(month == 10){
+                                        month = 11;
+                                    }else if(month == 11){
+                                        month = 12;
+                                    }
                                     var day = date.getDate();
                                     var year = date.getFullYear();
-                                    document.getElementById("date").placeholder = month + hyphen + day + hyphen + year;
+                                    var fullDate = month + hyphen + day + hyphen + year;
+                                    document.getElementById("date").placeholder  = fullDate;
                                 </script>
-                                <input type="text" class="form-control" id="date" name="date"  />
                             </div>
                         </div>
 
