--- a/index.html
+++ b/index.html
@@ -160,14 +160,14 @@
                         <div class="form-group">
                             <label class="col-lg-3 control-label">Street *</label>
                             <div class="col-lg-5">
-                                <input type="text" class="form-control" name="street" />
+                                <input type="text" class="form-control" placeholder="1234 Main Street"name="street" />
                             </div>
                         </div>
 
                         <div class="form-group">
                             <label class="col-lg-3 control-label">City *</label>
                             <div class="col-lg-5">
-                                <input type="text" class="form-control" name="city" />
+                                <input type="text" class="form-control" placeholder="San Francisco" name="city" />
                             </div>
                         </div>
 
