--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
                         <div class="form-group">
                             <label class="col-lg-3 control-label">Zip Code *</label>
                             <div class="col-lg-3">
-                                <input type="text" class="form-control" name="zipCode" />
+                                <input type="text" class="form-control" placeholder="12345" name="zipCode" />
                             </div>
                         </div>
 
