--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
                         <!-- first and last name -->
                         <div class="form-group">
-                            <label class="col-lg-3 control-label">Full name * </label>
+                            <h5 class="col-lg-3 control-label">Full name * </h5>
                             <div class="col-lg-4">
                                 <input type="text" class="form-control" name="firstName" placeholder="First name" />
                             </div>
@@ -66,7 +66,7 @@
 
                         <!-- gender -->
                         <div class="form-group">
-                            <label class="col-lg-3 control-label">Gender</label>
+                            <h5 class="col-lg-3 control-label">Gender</h5>
                             <div class="col-lg-5">
                                 <select class="form-control" name="gender">
                                       <option value="">Select your gender</option>
@@ -79,7 +79,7 @@
 
                         <!-- highest education -->
                         <div class="form-group">
-                            <label class="col-lg-3 control-label">Highest Education</label>
+                            <h5 class="col-lg-3 control-label">Highest Education</h5>
                             <div class="col-lg-5">
                                 <select class="form-control" name="education">
                                     <option value="">Select your highest education</option>
