--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
                         <!-- phone -->
                         <div class="form-group">
-                            <label class="col-lg-3 control-label">Phone Number *</label>
+                            <h5 class="col-lg-3 control-label">Phone Number *</h5>
                             <div class="col-lg-5">
                                 <!-- [\(]\d{3}[\)]\d{3}[\-]\d{4} -->
                                 <!-- ^d{3}[\-]\d{3}[\-]\d{4}$ -->
@@ -104,7 +104,7 @@
 
                         <!-- email -->
                         <div class="form-group">
-                            <label class="col-lg-3 control-label">Email address *</label>
+                            <h5 class="col-lg-3 control-label">Email address *</h5>
                             <div class="col-lg-5">
                                 <input type="text" class="form-control" placeholder="example@example.com" name="email" />
                             </div>
@@ -112,7 +112,7 @@
 
                         <!-- date -->
                         <div class="form-group">
-                            <label class="col-lg-3 control-label">Date *</label>
+                            <h5 class="col-lg-3 control-label">Date *</h5>
                             <div class="col-lg-5">
                                 <input type="text" class="form-control" id="date" name="date" />
                                 <script>
@@ -158,21 +158,21 @@
                         </div>
 
                         <div class="form-group">
-                            <label class="col-lg-3 control-label">Street *</label>
+                            <h5 class="col-lg-3 control-label">Street *</h5>
                             <div class="col-lg-5">
                                 <input type="text" class="form-control" placeholder="1234 Main Street"name="street" />
                             </div>
                         </div>
 
                         <div class="form-group">
-                            <label class="col-lg-3 control-label">City *</label>
+                            <h5 class="col-lg-3 control-label">City *</h5>
                             <div class="col-lg-5">
                                 <input type="text" class="form-control" placeholder="San Francisco" name="city" />
                             </div>
                         </div>
 
                         <div class="form-group">
-                            <label class="col-lg-3 control-label">State *</label>
+                            <h5 class="col-lg-3 control-label">State *</h5>
                             <div class="col-lg-5">
                                 <select name="state" class="form-control">
                                     <option value="">Select a state</option>
@@ -232,7 +232,7 @@
                         </div>
 
                         <div class="form-group">
-                            <label class="col-lg-3 control-label">Zip Code *</label>
+                            <h5 class="col-lg-3 control-label">Zip Code *</h5>
                             <div class="col-lg-3">
                                 <input type="text" class="form-control" placeholder="12345" name="zipCode" />
                             </div>
@@ -240,7 +240,7 @@
 
                         <!-- category -->
                         <div class="form-group">
-                            <label class="col-lg-3 control-label">Category *</label>
+                            <h5 class="col-lg-3 control-label">Category *</h5>
                             <div class="col-lg-5">
                                 <select class="form-control" name="category">
                                     <option value="">Select a category</option>
@@ -254,7 +254,7 @@
                         </div>
 
                         <div class="form-group">
-                            <label class="col-lg-3 control-label">Comment</label>
+                            <h5 class="col-lg-3 control-label">Comment</h5>
                             <div class="col-lg-5">
                                 <textarea class="form-control" name="comment" placeholder="200 characters max." rows="10" data-bv-stringlength data-bv-stringlength-max="200" data-bv-stringlength-message="The comment must be less than 200 characters long"></textarea>
                             </div>
@@ -262,7 +262,7 @@
 
                         <!-- image upload -->
                         <div class="form-group">
-                            <label class="col-lg-3 control-label">Upload Image(s)</label>
+                            <h5 class="col-lg-3 control-label">Upload Image(s)</h5>
                             <div id="wrapper" class="col-lg-5">
                                 <input id="fileUpload" type="file" class="btn btn-default" name="fileToUpload" multiple />
                                 <h6>One image only and maximum file size is 5mb</h6>
@@ -276,7 +276,7 @@
 
                         <!-- terms -->
                         <div class="form-group">
-                            <label class="col-lg-3 control-label">Terms *</label>
+                            <h5 class="col-lg-3 control-label">Terms *</h5>
                             <div class="col-lg-5">
                                 <div class="checkbox">
                                     <input type="checkbox" name="terms" /> Accept the terms and policies
@@ -286,7 +286,7 @@
 
                         <!-- catpcha -->
                         <div class="form-group">
-                            <!-- <label class="col-lg-3 control-label">Captcha *</label> -->
+                            <!-- <h5 class="col-lg-3 control-label">Captcha *</h5> -->
                             <h5 class="col-lg-3 control-label"><b>Captcha *</b></h5>
                             <div class="col-lg-5">
                                 <script>
