--- a/index.html
+++ b/index.html
@@ -51,9 +51,10 @@
                     <!--<form id="defaultForm" method="GET" class="form-horizontal" action="target.php">-->
                     <form id="defaultForm" method="post" class="form-horizontal" action="verification.php" enctype="multipart/form-data">
 
-                      <div class="col-lg-3 control-label">
-                            <h4 style='text-align: left;'>* indicates required field</h4>
-                      </div>
+                        <div class="col-lg-3">
+                              <h4 style='text-align: left;'>* indicates required field</h4>
+                        </div>
+
                         <div class="page-header">
                             <h4 style='text-align: left;'>Personal Information</h4>
                         </div>
