--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     </div>
 
                     <div>
-                          <h5 style='text-align: left;'>* indicates required field</h5>
+                          <h5 style='text-align: left; color: red;'><b>* indicates required field</b></h5>
                     </div>
                     <!--<form id="defaultForm" method="GET" class="form-horizontal" action="target.php">-->
                     <form id="defaultForm" method="post" class="form-horizontal" action="verification.php" enctype="multipart/form-data">
