--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
                         <!-- first and last name -->
                         <div class="form-group">
-                            <h5 class="col-lg-3 control-label">Full name * </h5>
+                            <h5 class="col-lg-3 control-label"><b>Full name *</b></h5>
                             <div class="col-lg-4">
                                 <input type="text" class="form-control" name="firstName" placeholder="First name" />
                             </div>
@@ -73,7 +73,7 @@
 
                         <!-- gender -->
                         <div class="form-group">
-                            <h5 class="col-lg-3 control-label">Gender</h5>
+                            <h5 class="col-lg-3 control-label"><b>Gender</b></h5>
                             <div class="col-lg-5">
                                 <select class="form-control" name="gender">
                                       <option value="">Select your gender</option>
@@ -86,7 +86,7 @@
 
                         <!-- highest education -->
                         <div class="form-group">
-                            <h5 class="col-lg-3 control-label">Highest Education</h5>
+                            <h5 class="col-lg-3 control-label"><b>Highest Education</b></h5>
                             <div class="col-lg-5">
                                 <select class="form-control" name="education">
                                     <option value="">Select your highest education</option>
@@ -111,7 +111,7 @@
 
                         <!-- email -->
                         <div class="form-group">
-                            <h5 class="col-lg-3 control-label">Email address *</h5>
+                            <h5 class="col-lg-3 control-label"><b>Email address *</b></h5>
                             <div class="col-lg-5">
                                 <input type="text" class="form-control" placeholder="example@example.com" name="email" />
                             </div>
@@ -119,7 +119,7 @@
 
                         <!-- date -->
                         <div class="form-group">
-                            <h5 class="col-lg-3 control-label">Date *</h5>
+                            <h5 class="col-lg-3 control-label"><b>Date *</b></h5>
                             <div class="col-lg-5">
                                 <input type="text" class="form-control" id="date" name="date" />
                                 <script>
@@ -165,21 +165,21 @@
                         </div>
 
                         <div class="form-group">
-                            <h5 class="col-lg-3 control-label">Street *</h5>
+                            <h5 class="col-lg-3 control-label"><b>Street *</b></h5>
                             <div class="col-lg-5">
                                 <input type="text" class="form-control" placeholder="1234 Main Street"name="street" />
                             </div>
                         </div>
 
                         <div class="form-group">
-                            <h5 class="col-lg-3 control-label">City *</h5>
+                            <h5 class="col-lg-3 control-label"><b>City *</b></h5>
                             <div class="col-lg-5">
                                 <input type="text" class="form-control" placeholder="San Francisco" name="city" />
                             </div>
                         </div>
 
                         <div class="form-group">
-                            <h5 class="col-lg-3 control-label">State *</h5>
+                            <h5 class="col-lg-3 control-label"><b>State *</b></h5>
                             <div class="col-lg-5">
                                 <select name="state" class="form-control">
                                     <option value="">Select a state</option>
@@ -239,7 +239,7 @@
                         </div>
 
                         <div class="form-group">
-                            <h5 class="col-lg-3 control-label">Zip Code *</h5>
+                            <h5 class="col-lg-3 control-label"><b>Zip Code *</b></h5>
                             <div class="col-lg-3">
                                 <input type="text" class="form-control" placeholder="12345" name="zipCode" />
                             </div>
@@ -247,7 +247,7 @@
 
                         <!-- category -->
                         <div class="form-group">
-                            <h5 class="col-lg-3 control-label">Category *</h5>
+                            <h5 class="col-lg-3 control-label"><b>Category *</b></h5>
                             <div class="col-lg-5">
                                 <select class="form-control" name="category">
                                     <option value="">Select a category</option>
@@ -261,7 +261,7 @@
                         </div>
 
                         <div class="form-group">
-                            <h5 class="col-lg-3 control-label">Comment</h5>
+                            <h5 class="col-lg-3 control-label"><b>Comment</b></h5>
                             <div class="col-lg-5">
                                 <textarea class="form-control" name="comment" placeholder="200 characters max." rows="10" data-bv-stringlength data-bv-stringlength-max="200" data-bv-stringlength-message="The comment must be less than 200 characters long"></textarea>
                             </div>
@@ -269,7 +269,7 @@
 
                         <!-- image upload -->
                         <div class="form-group">
-                            <h5 class="col-lg-3 control-label">Upload Image(s)</h5>
+                            <h5 class="col-lg-3 control-label"><b>Upload Image</b></h5>
                             <div id="wrapper" class="col-lg-5">
                                 <input id="fileUpload" type="file" class="btn btn-default" name="fileToUpload" multiple />
                                 <h6>One image only and maximum file size is 5mb</h6>
@@ -283,7 +283,7 @@
 
                         <!-- terms -->
                         <div class="form-group">
-                            <h5 class="col-lg-3 control-label">Terms *</h5>
+                            <h5 class="col-lg-3 control-label"><b>Terms *<b>/</h5>
                             <div class="col-lg-5">
                                 <div class="checkbox">
                                     <input type="checkbox" name="terms" /> Accept the terms and policies
@@ -294,7 +294,7 @@
                         <!-- catpcha -->
                         <div class="form-group">
                             <!-- <h5 class="col-lg-3 control-label">Captcha *</h5> -->
-                            <h5 class="col-lg-3 control-label">Captcha *</h5>
+                            <h5 class="col-lg-3 control-label"><b>Captcha *</b></h5>
                             <div class="col-lg-5">
                                 <script>
                                     var randNum = Math.floor(Math.random() * ((11 + 1) - 2)) + 2;
