--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
                         <!-- phone -->
                         <div class="form-group">
-                            <h5 class="col-lg-3 control-label">Phone Number *</h5>
+                            <h5 class="col-lg-3 control-label"><b>Phone Number *</b></h5>
                             <div class="col-lg-5">
                                 <!-- [\(]\d{3}[\)]\d{3}[\-]\d{4} -->
                                 <!-- ^d{3}[\-]\d{3}[\-]\d{4}$ -->
