--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
 
                         <!-- terms -->
                         <div class="form-group">
-                            <h4 class="col-lg-3 control-label"><b>Terms *<b>/</h4>
+                            <h4 class="col-lg-3 control-label"><b>Terms *</b></h4>
                             <div class="col-lg-5">
                                 <div class="checkbox">
                                     <input type="checkbox" name="terms" /> Accept the terms and policies
