--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                         <div class="form-group">
                             <h4 class="col-lg-3 control-label"><b>Street *</b></h4>
                             <div class="col-lg-5">
-                                <input type="text" class="form-control" placeholder="1234 Main Street"name="street" />
+                                <input type="text" class="form-control" placeholder="1600 Holloway Ave." name="street" />
                             </div>
                         </div>
 
@@ -241,7 +241,7 @@
                         <div class="form-group">
                             <h4 class="col-lg-3 control-label"><b>Zip Code *</b></h4>
                             <div class="col-lg-3">
-                                <input type="text" class="form-control" placeholder="12345" name="zipCode" />
+                                <input type="text" class="form-control" placeholder="94132" name="zipCode" />
                             </div>
                         </div>
 
