--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     </div>
 
                     <div>
-                        <h4 style='text-align: left; color: red;'><b>* indicates required field</b></h4>
+                        <h4 style='text-align: left;'><b><b style='color: red;'>*</b>indicates required field</b></h4>
                     </div>
                     <!--<form id="defaultForm" method="GET" class="form-horizontal" action="target.php">-->
                     <form id="defaultForm" method="post" class="form-horizontal" action="verification.php" enctype="multipart/form-data">
